ADD: security config